Blog-Change Directory Structure

--- a/_posts/Alogrithm/LeetCode/2019-01-24-two-sum.md
+++ b/_posts/Alogrithm/LeetCode/2019-01-24-two-sum.md
@@ -15,9 +15,9 @@ keywords:
     - leetcode
     - 알고리즘
 category:
-    - Study
+    - Algorithm
+    - LeetCode
 tags:
-    - java
     - algorithm
 published: true
 sitemap:
