--- a/_posts/Alogrithm/Programmers/2019-01-03-knumber.md
+++ b/_posts/Alogrithm/Programmers/2019-01-03-knumber.md
@@ -11,9 +11,9 @@ keywords:
     - 배열
     - algorithm
 category:
-    - Study
+    - Algorithm
+    - Programmers
 tags:
-    - java
     - algorithm
 published: true
 sitemap: 
