png title modify

--- a/_posts/Java/Study/2019-01-21-java-oop.md
+++ b/_posts/Java/Study/2019-01-21-java-oop.md
@@ -307,7 +307,7 @@ ct3이 객체화 된 순간 메모리에 새로운 주소가 할당되므로 복
 변수에는 ``멤버변수``와 ``지역변수``가 있으며, 멤버변수는 ``클래스변수, 인스턴스변수``로 나뉘어진다.  
 멤버변수는 초기화를 하지 않아도 default 값이 저장이 되지만 지역변수에는 초기화를 하지 않으면 사용할 수 없다.  
 #### 에러캡처 참고
-![캡처](/assets/images/blog/자바의정석_객체지향1_1.jpeg)
+![캡처](/assets/images/blog/java-oop1_1.jpeg)
 
 멤버변수(클래스, 인스턴스 변수)의 초기화 방법은 3가지가 있다.
 1. 명시적 초기화
