--- a/_posts/Alogrithm/LeetCode/2019-01-24-two-sum.md
+++ b/_posts/Alogrithm/LeetCode/2019-01-24-two-sum.md
@@ -3,7 +3,7 @@ layout: customize-posts
 title: "LeetCode - Two Sum"
 date: 2019-01-24
 last_modified_at: 2019-01-24
-description: "코딩문제 알고리즘 leetCode two sum"
+description: "코딩문제 알고리즘 leetCode two sum 수행복잡도 O(n^2)를 O((N)을 2개로 구분하여 처리하였다."
 header:
     teaser: /assets/images/blog/leetcode/LeetCode.png
     og_image: /assets/images/blog/leetcode/LeetCode.png
