modify - Thread post

--- a/_posts/Java/Study/2019-03-16-Thread.md
+++ b/_posts/Java/Study/2019-03-16-Thread.md
@@ -78,4 +78,112 @@ sitemap:
 
 ## 쓰레드 
 
+쓰레드란 프로세스에서 일하는 일꾼이다. 하나의 프로세스에는 최소 하나의 쓰레드가 필요하며 둘 이상의 쓰레드를 갖은 프로세스는 ``멀티쓰레드 프로세스``라고 한다. 또한 프로세스는 독립되 리소스를 부여받아 사용하지만 쓰레드의 경우 프로세스의 자원을 서로 공유할 수 있다. 프로세스에 쓰레드의 개수 제한은 없으나 일반적으로 쓰레드가 작업을 수행하는데 개별적인 메모리 공간(Call Stack)을 필요로 하기 때문에 프로세스의 메모리 한계에 의해 쓰레드의 개수가 정해진다.
+
+### 멀티태스킹과 멀티쓰레딩
+
+우리가 사용하는 대부분의 OS는 멀티태스킹을 지원한다 멀티태스킹은 프로세스가 동시에 여러개를 실행할 수 있는 환경이다. 마찬가지로 멀티쓰레딩은 하나의 프로세스에 여러 쓰레드가 동시에 작업을 수행하는 것이다. CPU의 코어가 하나로 가정하였을때 동시에 여러 쓰레드가 처리되는 것은 아니며 번갈아가며 짧은시간에 수행이 된다.(수행의 순서는 OS의 스케줄러에 의해 결정이 된다.) 동시에 처리되는 작업의 개수는 CPU의 코어수와 일치한다. 이러한 멀티쓰레딩의 장점으로는 ``CPU의 사용률 향상, 효율적인 자원사용, Client 응답률 향상``으로 볼 수 있다. 멀티쓰레딩으로 우리가 자주 듣는 채팅기능은 채팅을 하며 서로간 파일을 다운로드 받거나 하는 기능이다.
+
+하지만 장점만 있는 것은 아니다. 멀티쓰레딩 환경에서 쓰레드의 경우 프로세스의 자원을 공유하기때문에 동기화, 교착상태(쓰레드 락) 같은 몬제들이 따른다.
+
+### 쓰레드의 구현과 실행
+
+쓰레드의 구현은 두가지 방법이 있다. ``Thread클래스 상속, Runable인터페이스 구현``이며 두가지 방법이 차이는 없지만 전자인 상속으로 할 경우 추가적인 다른 클래스를 상속받지 못 하기 때문에 인터페이스 구현으로 진행하는 것이 일반적이다. 두가지 방법으로 정의 후 공통적인 ``run()``메서드를 통해 Thread의 작업내용을 구현하면 된다. 
+```java
+// 1. Thread클래스 상속
+class MyThread extends Thread {
+    public void run() {
+        // 작업내용
+    }
+}
+
+// 2. Runable인터페이스 구현
+class MyTread implements Runable {
+    public void run() {
+        // 작업내용
+    }
+}
+```
+
+위의 두가지 방법으로 구현 시 인스턴스 생성방법이 다르다. extends 방법은 해당 클래스를 바로 인스턴스화 하면되지만 implements 방법은 Runable을 통해 생성자 **Thread**를 통해 인스턴스화 해야한다. Runable로 인스턴스화 후 Thread클래스에 생성자의 매개변수로 넣어주어야 한다. 또 하나의 차이는 현재 실행중인 Thread가 무엇인지 확인하는 getName()메서드는 Thread를 상속받은 방법으로는 바로사용이 가능하지만 Runable로 구현된 방법에는 메서드가 구현이 되어있지 않기에 현재 실행중인 Thread를 반환하는 ``Thread.currentTread()``을 통해 .getName()으로 확인해야 한다.
+```java
+package com.java.mystudy.thread;
+
+public class ThreadMain {
+
+    public static void main(String args[]) {
+
+        Thread1 t1 = new Thread1();
+
+        Runnable r = new Thread2();
+        Thread t2 = new Thread(r);
+        // 위의 방법을 한줄로 처리하려면
+        // Thread t22 = new Thread(new Thread2());
+
+        t1.start();
+        t2.start();
+    }
+
+}
+
+class Thread1 extends Thread {
+    public void run() {
+        for (int i = 0; i < 5; i++) {
+            System.out.println(getName());
+        }
+    }
+}
+
+class Thread2 implements Runnable {
+
+    @Override
+    public void run() {
+        for (int i = 0; i < 5; i++) {
+            System.out.println(Thread.currentThread().getName());
+        }
+    }
+}
+
+/** 
+    출력결과
+
+    > Task :ThreadMain.main()
+    Thread-0
+    Thread-0
+    Thread-0
+    Thread-0
+    Thread-0
+    Thread-1
+    Thread-1
+    Thread-1
+    Thread-1
+    Thread-1
+*/
+```
+
+>TIP)  
+>쓰레드의 이름은 정의하지 않으면 알아서 넘버링이 된다.  
+>쓰레드의 이름을 부여하고 싶을때는 아래의 방법으로 가능하다.  
+>
+>Thread(Runable target, String name)  
+>Thread(String name)  
+>void setName(String name)
+
+
+**쓰레드의 실행 - run(), start()**
+
+쓰레드를 생성했다고 해서 자동으로 실행되지 않는다. ``start()``를 호출해야만 사용가능한데 start() 메서드는 실행시키는 메서드가 아닌 ``실행대기`` 상태로 만들어주며 자신 차례가 왔을때 실행이 되는 것이다. 또한 중요한 것은 한번 실행이 종료된 Thread는 다시 실행이 되지 않는다. 하나의 쓰레드에 대해 start()가 한 번만 호출 될 수 있다는 뜻이다. 
+
+main메서드에서 run()을 호출하는 것은 생성된 쓰레드를 실행시키는 것이 아니라 단순히 클래스에 선언된 메서드를 호출하는 것일 뿐이다. 반면에 start()는 새로운 쓰레드가 작업을 실행하는데 필요한 호출스택(call stack)을 생성한 다음에 run()을 호출하는 것이다. 아래 이미지를 보면 이해가 될 것이다.
+
+좌측의 main메서드의 에서 start()를 실행하면 call stack에 start()가 생성하며 우측에 call stack을 생성하게 된다. 그 후 우측 call stack에 run()을 호출 하게 된다.
+
+![repository](/assets/images/blog/Thread_callstack.png)
+
+1. main메서드에서 쓰레드의 start()를 호출한다. (좌측 이미지)
+2. start()는 새로운 쓰레드 생성 (우측의 call stack 공간 생성)
+3. 새로 생성된 call stack에 run()을 호출 (우측 이미지)
+4. call stack이 2개이므로 스케줄러가 정한 순서에 의해 번걸아 수행
+
+
 #### 위의 모든 정리내용은 자바의 정석을 공부하며 복습차 정리한 내용입니다. 
