modify - Thread post

--- a/_posts/Java/Study/2019-03-16-Thread.md
+++ b/_posts/Java/Study/2019-03-16-Thread.md
@@ -1,8 +1,8 @@
 ---
 layout: customize-posts
 title: "자바의정석 - 쓰레드"
-date: 2019-03-02
-last_modified_at: 2019-03-02
+date: 2019-03-22
+last_modified_at: 2019-03-23
 description: "남궁성님의 자바의정석을 읽고 중요하다고 생각하는 내용 정리 및 리마인드, 객체지향 프로그래밍에 대한 내용 chapter7입니다. jvm 메모리 구조에 대해서도 정리 함. 자바의정석, 남궁성, 자바, java, 객체지향, 프로그래밍, JVM, 메모리구조, memory, 클래스, 인스턴스, 객체화, 클래스 변수, 컬렉션, 지네릭스, 인스턴스 변수, 초기화,
 초기화 블럭, 명시적 초기화, 명시적, 생성자, 매개변수, 추상클래스, abstract, 이너클래스, innerclass, 익명클래스, anonymous, 예외처리, 예외, try, catch, exception, throw, finaly java.lang package, util class, object, String, literal, 리터럴, Objects, wrapper, StringBuffer, String, date, calendar, simpledateformat, format, Collection, list, set, map, hash, hashMap, iterator, arraylist, linkedlist, stack, queue, Generics, 지네릭스"
 header:
@@ -249,8 +249,209 @@ System.out.println(t.getPriority()) // t의 우선순위 값 반환.
 
 ## 쓰레드 그룹
 
+쓰레드 그룹은 서로 관련된 쓰레드를 그룹으로 다루기 위한 것이다. 다른 쓰레드 그룹에 또 다른 그룹을 포함시켜서 사용할 수 도 있다. 그룹은 보안상의 이유로 도입된 개념이며, 자신이 속한 쓰레드 그룹이나 하위 쓰레드 그룹은 변경할 수 있지만 다른 쓰레드 그룹의 쓰레드를 변경할 수는 없다. 쓰레드를 쓰레드 그룹에 포함시키려면 Thread의 생성자를 이용해야 한다.
 
+```java
+Thread(ThreadGroup group, String name)
+Thread(ThreadGroup group, Runable target)
+Thread(ThreadGroup group, Runable target, String name)
+Thread(ThreadGroup group, Runable target, String name, long stackSize)
+```
 
+쓰레드는 반드시 쓰레드 그룹에 포함되어야 하며, 위와같이 쓰레드 그룹에 지정하는 생성자를 사용하지 않은 쓰레드는 기본적으로 자신을 생성한 쓰레드와 같은 그룹에 속하게 된다. JVM은 main과 system이라는 쓰레드 그룹을 만든다. main메서드를 수행하는 main이라는 이름의 쓰레드는 main쓰레드 그룹에 속하고 가비지컬렉션을 수행하는 Finalizer쓰레드는 system쓰레드 그룹에 속한다. 
 
+## 데몬 쓰레드
+
+데몬 쓰레드는 다른 일반 쓰레드의 작업을 돕는 보조적인 역할을 수행한다. 우리가 사용하는 일반 쓰레드가 모두 종료되면 데몬 쓰레드는 강제적으로 종료가 된다. 데몬 쓰레드의 경우 무한루프와 조건문을 이용해서 실행 후 대기상태로 있다 특정 조건이 만족하게되면 작업을 수행하고 다시 대기하도록 작성을 한다. 일반 쓰레드 생성과 같으며 ``setDaemon(true)``를 호출하기만 하면 된다. 추가적으로 데몬 쓰레드가 생성한 쓰레드는 자동적으로 데몬 쓰레드가 된다는 점도 알아두자.
+
+```java
+boolean isDaemon()          // 데몬 쓰레드인지 확인
+void setDaemon(boolean on)  // 쓰레드를 데몬 쓰레드 or 일반 쓰레드로 변경
+```
+
+```java
+package com.java.mystudy.thread;
+
+public class ThreadMain {
+
+    private static boolean flag = false;
+
+    public static void main(String args[]) {
+
+        // 일반 쓰레드 생성하듯이 생성
+        Thread t = new Thread(new ThreadDaemon());
+        // 데몬 쓰레드로 지정
+        t.setDaemon(true);
+        // 쓰레드 실행대기로 전환
+        t.start();
+
+        for (int i = 1; i < 50 ; i++) {
+            try {
+                Thread.sleep(1000); // 지연시간을 주기위한 값
+            } catch (InterruptedException e) {
+
+            }
+            System.out.print(i+" ");
+
+            // 데몬 쓰레드의 트리거를 위한 flag값
+            if(i%5 == 0){
+                flag = true;
+            }
+        }
+
+        System.out.println("Main Thread 좋료");
+    }
+
+    static class ThreadDaemon implements Runnable {
+
+        @Override
+        public void run() {
+            while(true) {
+
+                try {
+                    Thread.sleep(1000); // 데몬 쓰레드를 항시 체크하지 않고 주기를 주기위한 용도
+                } catch (InterruptedException e) {
+
+                }
+
+                // flag의 상태를 위의 주기를 통하여 체크
+                if(flag) {
+                    System.out.println("Daemon Check");
+                    flag = false;
+                }
+            }
+        }
+    }
+}
+/**
+출력결과
+1 2 3 4 5 Daemon Check
+6 7 8 9 10 Daemon Check
+11 12 13 14 15 Daemon Check
+16 17 18 19 20 Daemon Check
+21 22 23 24 25 Daemon Check
+26 27 28 29 30 Daemon Check
+31 32 33 34 35 Daemon Check
+36 37 38 39 40 Daemon Check
+41 42 43 44 45 Daemon Check
+46 47 48 49 Main Thread 좋료
+*/
+```
+
+밑의 쓰레드의 종료 조건은 없다. 무한 루프에서 단지 조건문을 통해 데몬 쓰레드의 동작을 유도시킨 것 뿐이다. 하지만 main쓰레드의 종료와 함꼐 데몬 쓰레드가 종료가되어 프로그램이 끝나는 것을 볼 수 있다. 위에서 ``t.setDaemon(true)``를 해주지 않았다면 이 프로그램은 무한반복 동작을 하게 된다. 반드시 데몬 쓰레드의 경우엔 ``start()``를 하기전에 선언을 해야되는 것을 기억해두자.
+
+## 쓰레드의 실행동제어
+
+쓰레드가 어려운 부분은 바로 ``동기화``와 ``스케줄링`` 때문이다. 효율적인 멀티쓰레드 환경을 구현하기 위해서는 프로세스에 주어진 자원관 시간을 여러 쓰레드가 효율적으로 사용하게 구현해야 한다. 아래는 쓰레드 스케줄링과 관련된 메서드이다.
+
+|메서드|설명|
+|----|---|
+|static void sleep(long millis)|지정된 시간동안 쓰레드를 일시정지시킨다.|
+|void join(), void join(long millis)|지정된 시간동안 쓰레드가 실행되도록 한다. 자신 쓰레드에서 선언하여 다른 쓰레드의 실행을 유도하는 것이다. (sleep()과는 자원사용부분이 다름)|
+|void interrupt()|sleep()이나 join()에 의해 일시정지상태인 쓰레드를 꺠워서 실행대기상태로 만든다.|
+|void stop()|쓰레드를 즉시 종료한다.|
+|void suspend()|쓰레드를 일시정지시킨다. resume()을 사용하여 다시 실행대기상태로 만들수 있다.|
+|void resume()|suspend()에 의해 일시정지상태에 있는 쓰레드를 실행대기상태로 만든다.|
+|static void yield()|실행 중에 자신에게 주어진 실행시간을 다른 쓰레드에게 양보하고 자신은 실행대기상태가 된다.|
+
+**sleep()**
+
+sleep()에 의해 일시정지 상태가 된 쓰레드는 지정된 시간이 지나거나 interrupt()가 호출되면 ``InterruptedException``이 발생되어 실행대기상태가 된다. Thread.sleep()을 사용할떄는 항상 try-catch가 붙는 이유이다.
+```java
+try {
+    Thread.sleep(1000);
+} catch(InterruptedException e) {
+
+}
+```
+
+**interrupt()와 interrupted()**
+
+작업중인 쓰레드를 멈출때 사용하며 쓰레드를 종료하는 것은 아니다. interrupt()를 호출하게 되면 interrupted의 상태값을 바꾸는 것일 뿐이다. 역으로 보면 interrupted()를 호출하게 되면 현재 쓰레드의 상태를 알 수 있다. 여기서 알아둘 점은 isInterrupted()도 있다는 것이다. 두개의 차이점은 현재의 상태값을 반환하고 false로 초기화를 하냐 상태값을 유지하느냐의 차이다.
+
+```java
+void interrupt()                // 쓰레드의 interrupted의 상태를 true로 변경
+boolean isInterrupted()         // 쓰레드의 interrupted의 상태를 반환
+static boolean interrupted()    // 쓰레드의 interrupted의 상태를 반환 한뒤 false로 초기화
+```
+
+```java
+package com.java.mystudy.thread;
+
+public class ThreadMain implements Runnable {
+
+    static boolean flag = false;
+
+    public static void main(String args[]){
+
+        // Daemon Thread
+        Thread td = new Thread(new ThreadMain());
+        td.setDaemon(true);
+        td.start();
+
+        // Thread
+        Thread1 t = new Thread1();
+        t.start();
+
+        // Thread1이 수행될 시간을 부여하기 위해
+        try {
+            Thread.sleep(5*1000);
+        } catch (InterruptedException e) {
+
+        }
+
+        // Thread1 Interrupt 발생
+        t.interrupt();
+        // Daemon Thread 수행을 위한 flag 값
+        flag = true;
+    }
+
+    @Override
+    public void run() {
+        while(true) {
+            try {
+                Thread.sleep(1000);
+            } catch (InterruptedException e) {
+
+            }
+            if(flag) {
+                System.out.println("Thread 1 Interrupt");
+            }
+        }
+    }
+}
+
+class Thread1 extends Thread {
+
+    public void run() {
+        int cnt = 0;
+
+        while(!isInterrupted()) {
+            cnt++;
+            System.out.println("[ " + cnt + "] isInterrupted : " + isInterrupted());
+
+            // !!!!!!!!! Check point !!!!!!!!!!
+            try {
+                Thread.sleep(1000);
+            } catch (InterruptedException e) {
+                interrupt();
+            }
+        }
+    }
+}
+/**
+출력결과
+[ 1] isInterrupted : false
+[ 2] isInterrupted : false
+[ 3] isInterrupted : false
+[ 4] isInterrupted : false
+[ 5] isInterrupted : false
+[ 6] isInterrupted : false
+[ 7] isInterrupted : false
+Thread 1 Interrupt
+*/
+```
+
+위의 소스 중 main클래스에서 ``t.interrupt()``를 통해 Thread1클래스 의 반복문을 빠져나오려는 의도의다. 하지만 isInterrupted()를 호출해 보면 false로 나온다. 그 이유는 Thread1 클래스의 **Check point**의 소스 때문이다. Thread.sleep()을 주게 되면 쓰레드가 잠시 멈춰져있는 상태인데 이떄 interrupt()를 호출하면 InterruptedException이 발생되고 쓰레드의 interrupted()의 상태는 자동으로 false로 초기화가 된다. 이렇게 사용할 때는 ``catch문에 interrupt()``를 한번더 호출해 주어 상태값을 변경해주어야 한다. 꼭 기억해두고 넘어가자.
 
 #### 위의 모든 정리내용은 자바의 정석을 공부하며 복습차 정리한 내용입니다. 
