--- a/_posts/Java/Study/2019-03-16-Thread.md
+++ b/_posts/Java/Study/2019-03-16-Thread.md
@@ -1,8 +1,8 @@
 ---
 layout: customize-posts
-title: "자바의정석 - 쓰레드"
+title: "자바의정석 - 쓰레드 1편"
 date: 2019-03-22
-last_modified_at: 2019-03-23
+last_modified_at: 2019-03-24
 description: "남궁성님의 자바의정석을 읽고 중요하다고 생각하는 내용 정리 및 리마인드, 객체지향 프로그래밍에 대한 내용 chapter7입니다. jvm 메모리 구조에 대해서도 정리 함. 자바의정석, 남궁성, 자바, java, 객체지향, 프로그래밍, JVM, 메모리구조, memory, 클래스, 인스턴스, 객체화, 클래스 변수, 컬렉션, 지네릭스, 인스턴스 변수, 초기화,
 초기화 블럭, 명시적 초기화, 명시적, 생성자, 매개변수, 추상클래스, abstract, 이너클래스, innerclass, 익명클래스, anonymous, 예외처리, 예외, try, catch, exception, throw, finaly java.lang package, util class, object, String, literal, 리터럴, Objects, wrapper, StringBuffer, String, date, calendar, simpledateformat, format, Collection, list, set, map, hash, hashMap, iterator, arraylist, linkedlist, stack, queue, Generics, 지네릭스"
 header:
@@ -65,12 +65,15 @@ keywords:
     - Thread
     - 스레드
     - 쓰레드
+    - Daemon
+    - 데몬
+    - ThreadGroup
 category:
     - Java
     - Study
 tags:
     - java
-published: false
+published: true
 sitemap:
     changefreq: daily
     priority: 1.0
@@ -453,5 +456,179 @@ Thread 1 Interrupt
 ```
 
 위의 소스 중 main클래스에서 ``t.interrupt()``를 통해 Thread1클래스 의 반복문을 빠져나오려는 의도의다. 하지만 isInterrupted()를 호출해 보면 false로 나온다. 그 이유는 Thread1 클래스의 **Check point**의 소스 때문이다. Thread.sleep()을 주게 되면 쓰레드가 잠시 멈춰져있는 상태인데 이떄 interrupt()를 호출하면 InterruptedException이 발생되고 쓰레드의 interrupted()의 상태는 자동으로 false로 초기화가 된다. 이렇게 사용할 때는 ``catch문에 interrupt()``를 한번더 호출해 주어 상태값을 변경해주어야 한다. 꼭 기억해두고 넘어가자.
+
+**suspend(), resume(), stop()**
+
+suspend()는 sleep()과 같이 쓰레드의 동작을 멈추게하며, resume()을 통해 다시 실행대기상태로 전환할 수 있다. stop()은 말 그대로 쓰레드를 종료시키는 용도이다. 알아두어야 할 점은 suspend()와 stop()은 쓰레드 락을 유발하기 쉬워 현재는 ``Deprecated``로 Java에서 사용을 권장하지 않는다. 
+
+**yield()**
+
+yield()는 스케줄러에 의해 주어진 실행시간을 다음 차례의 쓰레드에게 양보하는 방법이다. 자신이 10초를 할당받아 작업을 한다고 하였을때 로직상 5초 수행하다 yield()가 호출이 되면 나머지 5초를 다음 차례의 쓰레드에게 양보하는 개념이다. yield()와 interrup()를 적절하게 사용하면 프로그램의 응답성을 높이고 효율적인 실행이 가능하다.
+
+**join()**
+
+자신이 수행할 작업을 잠시 멈춘 뒤 다른 쓰레드가 지정된 시간동안 작업을 수행하도록 할때 사용한다. 만일 시간을 지정하지 않을 경우 다른 쓰레드가 작업을 종료할떄까지 기다리게 된다. join()의 경우 try-catch로 감싸주어야 하며 interrupt()에 의해 join상태를 벗어 날 수 있다.
+```java
+join()
+join(long millis)
+join(long millis, int nanos)
+```
+
+아래의 예제는 ``suspend(), resume(), stop(), join()``을 사용한 예제이다. main을 제외한 2개의 쓰레드를 생성하여 수행하며 중간에 하나의 쓰레드를 일시중지하고 하나의 쓰레드만 처리되게 하며, 다른 쓰레드를 종료시킨 후 일시중지한 쓰레드를 재개하는 예제이다. 
+```java
+package com.java.mystudy.thread;
+
+public class ThreadMain implements Runnable {
+
+    static String flag = "";
+
+    public static void main(String args[]){
+
+        // Daemon Thread
+        Thread td = new Thread(new ThreadMain());
+        td.setDaemon(true);
+        td.start();
+
+        // Thread 1
+        Thread1 t = new Thread1();
+        t.start();
+
+        // ThreadJoin
+        Thread tj = new Thread(new ThreadJoin("Join"));
+        tj.start();
+
+        // ThreadJoin을 join 상태로 만들기 -> main 클래스에서 ThreadJoin의 작업이 종료될때까지 수행된다.
+        try {
+            tj.join(3*1000);
+            flag = "join";
+        } catch (InterruptedException e) {
+
+        }
+
+        // Thread 지연을 줌
+        try {
+            Thread.sleep(3*1000);
+        } catch (InterruptedException e) {
+
+        }
+
+        // ThreadJoin쓰레드를 일시중지 함.
+        // Thread 1만 수행되게 하기 위해
+        tj.suspend();
+        flag = "suspend";
+
+        // Thread 지연을 줌
+        try {
+            Thread.sleep(3*1000);
+        } catch (InterruptedException e) {
+
+        }
+
+        // Thread 1 중지시키고 ThreadJoin의 작업을 재개함.
+        t.stop();
+        System.out.println(t.getName() + " [ Stop ]");
+        tj.resume();
+    }
+
+    @Override
+    public void run() {
+        while(true) {
+            try {
+                Thread.sleep(1000);
+            } catch (InterruptedException e) {
+
+            }
+            if(flag.equals("join")) {
+                System.out.println("!!~ ThreadJoin Class status -> [ Join ]");
+                flag = "";
+            } else if (flag.equals("suspend")) {
+                System.out.println("!!~ ThreadJoin Class status -> [ Suspend ]");
+                flag = "";
+            }
+        }
+    }
+}
+
+class Thread1 extends Thread {
+
+    public void run() {
+
+        System.out.println(getName() + " Start ~!");
+        int cnt = 0;
+
+        while(!isInterrupted()) {
+            cnt++;
+            System.out.println(getName() + "[ " + cnt + " ]");
+
+            try {
+                Thread.sleep(1000);
+            } catch (InterruptedException e) {
+                interrupt();
+            }
+        }
+    }
+}
+
+class ThreadJoin implements Runnable {
+
+    // thread name 셋팅을 위한 변수
+    Thread thread;
+
+    // thread name 셋팅을 위한 생성자
+    ThreadJoin(String name) {
+        thread = new Thread(this, name);
+    }
+
+    @Override
+    public void run() {
+        System.out.println(thread.getName()+ " Start ~!");
+
+        int cnt = 0;
+        while(true) {
+            cnt++;
+            System.out.println(thread.getName() + " [ " + cnt + " ] ");
+            try {
+                Thread.sleep(1000);
+            } catch (InterruptedException e) {
+
+            }
+
+            if(cnt >= 10) {
+                System.out.println(thread.getName() + " [ Finished ]");
+                break;
+            }
+        }
+    }
+}
+/**
+출력결과
+Thread-1 Start ~!
+Thread-1[ 1 ]
+Join Start ~!
+Join [ 1 ] 
+Thread-1[ 2 ]
+Join [ 2 ] 
+Thread-1[ 3 ]
+Join [ 3 ] 
+!!~ ThreadJoin Class status -> [ Join ]
+Thread-1[ 4 ]
+Join [ 4 ] 
+Thread-1[ 5 ]
+Join [ 5 ] 
+Thread-1[ 6 ]
+Join [ 6 ] 
+!!~ ThreadJoin Class status -> [ Suspend ]
+Thread-1[ 7 ]
+Thread-1[ 8 ]
+Thread-1[ 9 ]
+Thread-1 [ Stop ]
+Join [ 7 ] 
+Join [ 8 ] 
+Join [ 9 ] 
+Join [ 10 ] 
+Join [ Finished ]
+*/
+```
+
 
 #### 위의 모든 정리내용은 자바의 정석을 공부하며 복습차 정리한 내용입니다. 
