modify - Thread post

--- a/_posts/Java/Study/2019-03-16-Thread.md
+++ b/_posts/Java/Study/2019-03-16-Thread.md
@@ -1,6 +1,6 @@
 ---
 layout: customize-posts
-title: "자바의정석 - 쓰레드 1편"
+title: "자바의정석 - 쓰레드"
 date: 2019-03-22
 last_modified_at: 2019-03-24
 description: "남궁성님의 자바의정석을 읽고 중요하다고 생각하는 내용 정리 및 리마인드, 객체지향 프로그래밍에 대한 내용 chapter7입니다. jvm 메모리 구조에 대해서도 정리 함. 자바의정석, 남궁성, 자바, java, 객체지향, 프로그래밍, JVM, 메모리구조, memory, 클래스, 인스턴스, 객체화, 클래스 변수, 컬렉션, 지네릭스, 인스턴스 변수, 초기화,
